--- a/sass/layouts/_customers.scss
+++ b/sass/layouts/_customers.scss
@@ -4,16 +4,17 @@
 
  .customers-icon {
      margin-right: 30px;
+    &:nth-last-child(1) {
+            margin-right: 0px;
+        }
+
  }
 
- .customers-icon:nth-last-child(1) {
-     margin-right: 0px;
- }
+
 
  .customers-icon-link {
-     display: flex;
+    %flex-align
      justify-content: center;
-     align-items: center;
      padding: 0;
      width: 170px;
      height: 92px;
@@ -21,10 +22,11 @@
      border-radius: 4px;
      fill: var(--primary-background-color-icon);
      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        border-color: var(--second-background-color-icon);
+        fill: var(--second-background-color-icon);
+    }
  }
 
- .customers-icon-link:hover,
- .customers-icon-link:focus {
-     border-color: var(--second-background-color-icon);
-     fill: var(--second-background-color-icon);
- }
+ 
