--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -25,22 +25,20 @@
      letter-spacing: 0.03em;
      color: var(--primary-link-color);
      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        color: var(--primary-background-color);
+    }
  }
 
  span.footer-logo {
      font-family: 'Raleway', sans-serif;
      color: var(--accent-color);
- }
-
- .footer-logo:hover,
- .footer-logo:focus {
-     color: var(--primary-background-color);
- }
-
- span.footer-logo:hover,
- span.footer-logo:focus {
-     color: var(--accent-color);
- }
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
+}
 
  .footer-addres {
      font-size: 14px;
@@ -49,6 +47,10 @@
      font-style: normal;
      color: var(--primary-link-color);
      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
  }
 
  .footer-mail-tel {
@@ -57,17 +59,12 @@
      letter-spacing: 0.03em;
      color: var(--footer-mail-tel-color);
      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
  }
 
- .footer-mail-tel:hover,
- .footer-mail-tel:focus {
-     color: var(--accent-color);
- }
-
- .footer-addres:hover,
- .footer-addres:focus {
-     color: var(--accent-color);
- }
 
  .footer-social-container {
      display: flex;
@@ -91,16 +88,15 @@
 
  .footer-social-element {
      margin-right: 10px;
+    &:nth-last-child(1) {
+            margin-right: 0px;
+        }
  }
 
- .footer-social-element:nth-last-child(1) {
-     margin-right: 0px;
- }
 
  .footer-social-icon-svg {
-     display: flex;
+    %flex-align
      justify-content: center;
-     align-items: center;
      padding: 0;
      border: none;
      width: 44px;
@@ -109,11 +105,10 @@
      fill: var(--primary-link-color);
      background-color: var(--footer-background-color);
      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
-
- .footer-social-icon-svg:hover,
- .footer-social-icon-svg:focus {
-     background-color: var(--second-background-color-icon);
+    &:hover,
+    &:focus {
+        background-color: var(--second-background-color-icon);
+    }
  }
 
  .footer-form {
@@ -139,16 +134,14 @@
      letter-spacing: 0.03em;
      color: var(--footer-mail-tel-color);
      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
-
- .footer-form-email:focus,
- .footer-form-email:hover {
-     border-color: var(--accent-color);
- }
-
- .footer-form-email::placeholder {
-     color: var(--footer-mail-tel-color);
-     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus,
+    &:hover {
+        border-color: var(--accent-color);
+    }
+    &::placeholder {
+        color: var(--footer-mail-tel-color);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
  }
 
  .footer-form-email:focus::placeholder,
@@ -165,12 +158,12 @@
      position: relative;
      margin-left: 12px;
      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    &-icon {
+            position: absolute;
+            top: 50%;
+            right: 28px;
+            transform: translateY(-50%);
+            fill: var(--primary-btn-color);
+        }
  }
 
- .subscribe-btn-icon {
-     position: absolute;
-     top: 50%;
-     right: 28px;
-     transform: translateY(-50%);
-     fill: var(--primary-btn-color);
- }
