--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -3,8 +3,7 @@
 }
 
 .header-container {
-    display: flex;
-    align-items: center;
+    d%flex-align
 }
 
 .header-logo {
@@ -15,21 +14,21 @@
     letter-spacing: 0.03em;
     color: var(--header-logo-color);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        color: var(--header-logo-color);
+    }
 }
 
 span.header-logo {
     color: var(--accent-color);
+    
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+        }
 }
 
-.header-logo:hover,
-.header-logo:focus {
-    color: var(--header-logo-color);
-}
-
-span.header-logo:hover,
-span.header-logo:focus {
-    color: var(--accent-color);
-}
 
 .header-nav {
     margin-left: 93px;
@@ -42,11 +41,12 @@ span.header-logo:focus {
 
 .header-element {
     margin-right: 50px;
+    &:nth-last-child(-n+1) {
+    margin-right: 0px;
+    }
 }
 
-.header-element:nth-last-child(-n+1) {
-    margin-right: 0px;
-}
+
 
 .header-link {
     font-weight: 500;
@@ -59,17 +59,14 @@ span.header-logo:focus {
     padding-bottom: 25px;
     display: block;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-link:hover,
-.header-link:focus {
-    color: var(--accent-color);
-}
-
-.header-link-active {
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
+    &-active {
     color: var(--accent-color);
     position: relative;
-
+    }
 }
 
 .active-liner {
@@ -82,8 +79,7 @@ span.header-logo:focus {
 }
 
 .contacts-list {
-    display: flex;
-    align-items: center;
+    %flex-align
 }
 
 .contacts-element:nth-child(1) {
@@ -91,8 +87,7 @@ span.header-logo:focus {
 }
 
 .header-mail {
-    display: flex;
-    align-items: center;
+    %flex-align
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
@@ -100,29 +95,28 @@ span.header-logo:focus {
     color: var(--second-link-color);
     cursor: pointer;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+        fill: var(--accent-color);
+    }
 }
 
-.header-mail:hover,
-.header-mail:focus {
-    color: var(--accent-color);
-    fill: var(--accent-color);
-}
+
 
 .header-tel {
-    display: flex;
-    align-items: center;
+    %flex-align
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
     letter-spacing: 0.02em;
     color: var(--second-link-color);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-tel:hover,
-.header-tel:focus {
-    color: var(--accent-color);
-    fill: var(--accent-color);
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+        fill: var(--accent-color);
+    }
 }
 
 .contacts-icon {
