--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -5,6 +5,10 @@
      height: 100%;
      background-color: var(--backdrop-background-color);
      transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &.is-hidden .modal {
+            transform: translate(-50%, -50%) scale(0);
+            border-radius: 40%;
+        }
  }
 
  .modal {
@@ -21,18 +25,12 @@
      padding: 40px;
  }
 
- .backdrop.is-hidden .modal {
-     transform: translate(-50%, -50%) scale(0);
-     border-radius: 40%;
- }
-
  .modal-button {
      position: absolute;
      top: 8px;
      right: 8px;
-     display: flex;
+    %flex-align
      justify-content: center;
-     align-items: center;
      width: 30px;
      height: 30px;
      border: 1px solid rgba(0, 0, 0, 0.1);
@@ -41,17 +39,19 @@
      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
      fill: currentColor;
      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &-svg {
+            padding: 0;
+        }
+    &:focus,
+    &:hover {
+        border-color: var(--accent-color);
+        fill: var(--accent-color);
+    }
+
  }
 
- .modal-button-svg {
-     padding: 0;
- }
 
- .modal-button:focus,
- .modal-button:hover {
-     border-color: var(--accent-color);
-     fill: var(--accent-color);
- }
+
 
  .is-hidden {
      opacity: 0;
@@ -76,35 +76,33 @@
      border-radius: 4px;
      padding-left: 42px;
      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus,
+    &:hover {
+        border-color: var(--accent-color);
+    }
+    &:focus+svg,
+    &:hover+svg {
+        fill: var(--accent-color);
+    }
  }
 
- .modal-input:focus,
- .modal-input:hover {
-     border-color: var(--accent-color);
- }
 
- .modal-input:focus+svg,
- .modal-input:hover+svg {
-     fill: var(--accent-color);
- }
 
  .modal-input-group {
      margin-bottom: 10px;
-
+    &:last-child {
+            margin-bottom: 20px;
+        }
+    & label {
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.01em;
+        color: var(--primary-subtitle-color);
+        margin-bottom: 4px;
+    }
  }
 
- .modal-input-group:last-child {
-     margin-bottom: 20px;
-
- }
-
- .modal-input-group label {
-     font-size: 12px;
-     line-height: 1.16;
-     letter-spacing: 0.01em;
-     color: var(--primary-subtitle-color);
-     margin-bottom: 4px;
- }
+ 
 
  .modal-text {
      width: 100%;
@@ -113,11 +111,12 @@
      border-radius: 4px;
      padding: 12px 16px;
      resize: none;
+    &::placeholder {
+            color: var(--primary-input-placeholder);
+        }
  }
 
- .modal-text::placeholder {
-     color: var(--primary-input-placeholder);
- }
+
 
  .modal-input-wrapper {
      position: relative;
@@ -137,26 +136,26 @@
 
  .modal-politic-label {
      color: var(--primary-subtitle-color);
+    &::before {
+            content: '';
+            width: 16px;
+            height: 15px;
+            border: 2px solid var(--primary-fill-modal-icon);
+            border-radius: 2px;
+            margin-right: 9px;
+            transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        }
+
  }
 
  .link-politic {
      color: var(--accent-color);
  }
 
- .modal-politic-label::before {
-     content: '';
-     width: 16px;
-     height: 15px;
-     border: 2px solid var(--primary-fill-modal-icon);
-     border-radius: 2px;
-     margin-right: 9px;
-     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
- }
 
  label.modal-politic-label {
-     display: flex;
-     align-items: center;
+    %flex-align
      justify-content: center;
  }
 
