--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,17 +1,17 @@
  .button-list {
-     display: flex;
-     align-items: center;
+    %flex-align
      justify-content: center;
      margin-bottom: 50px;
  }
 
  .button-element {
      margin-right: 8px;
+    &:nth-last-child(-n+1) {
+            margin-right: 0px;
+        }
  }
 
- .button-element:nth-last-child(-n+1) {
-     margin-right: 0px;
- }
+
 
  .portfolio-btn {
      font-family: inherit;
@@ -27,14 +27,12 @@
      border-radius: 4px;
      padding: 6px 22px;
      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
-
-
- .portfolio-btn:hover,
- .portfolio-btn:focus {
-     color: var(--primary-btn-color);
-     background-color: var(--accent-color);
-     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    &:hover,
+    &:focus {
+        color: var(--primary-btn-color);
+        background-color: var(--accent-color);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
  }
 
  .portfolio-list {
@@ -46,25 +44,27 @@
      width: calc((100% - 60px) / 3);
      margin-right: 30px;
      margin-bottom: 30px;
+    &:nth-child(3n) {
+            margin-right: 0px;
+        }
+    
+    &:nth-last-child(-n+3) {
+        margin-bottom: 0px;
+    }
+
  }
 
- .portfolio-element:nth-child(3n) {
-     margin-right: 0px;
- }
-
- .portfolio-element:nth-last-child(-n+3) {
-     margin-bottom: 0px;
- }
+ 
 
  .portfolio-element-link {
      display: block;
      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
  }
 
- .portfolio-element-link:hover,
- .portfolio-element-link:focus {
-     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
- }
 
  .portfolio-element-link:hover .portfolio-cover-text,
  .portfolio-element-link:focus .portfolio-cover-text {
@@ -89,19 +89,19 @@
      transform: translateY(100%);
      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
      overflow: auto;
- }
+    &::-webkit-scrollbar {
+            width: 5px;
+        }
+    
+    &::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+    }
 
- .portfolio-cover-text::-webkit-scrollbar {
-     width: 5px;
- }
+    &::-webkit-scrollbar-thumb {
+        background-color: transparent;
+    }
 
- .portfolio-cover-text::-webkit-scrollbar-track {
-     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
- }
-
- .portfolio-cover-text::-webkit-scrollbar-thumb {
-     background-color: transparent;
- }
+}
 
  .portfolio-img {
      display: block;
