--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,22 +1,23 @@
  .team {
      background-color: var(--team-background-color);
- }
-
- .team-list {
+    &-list {
      display: flex;
-
+     }
  }
+
+
 
  .team-element {
      margin-right: 30px;
      background-color: var(--primary-background-color);
      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
      border-radius: 0px 0px 4px 4px;
+    &:nth-last-child(-n+1) {
+     margin-right: 0px;
+    }
  }
 
- .team-element:nth-last-child(-n+1) {
-     margin-right: 0px;
- }
+
 
  .team-img {
      display: block;
@@ -53,16 +54,14 @@
 
  .team-icon {
      margin-right: 10px;
- }
-
- .team-icon:nth-last-child(1) {
+    &:nth-last-child(1) {
      margin-right: 0px;
+ }
  }
 
  .team-icon-svg {
-     display: flex;
+    %flex-align
      justify-content: center;
-     align-items: center;
      padding: 0;
      border: none;
      width: 44px;
@@ -70,11 +69,11 @@
      border-radius: 50%;
      fill: var(--primary-background-color-icon);
      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        fill: var(--primary-link-color);
+        background-color: var(--second-background-color-icon);
+    }
 
  }
 
- .team-icon-svg:hover,
- .team-icon-svg:focus {
-     fill: var(--primary-link-color);
-     background-color: var(--second-background-color-icon);
- }
