--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -1,6 +1,27 @@
  .work {
      padding-top: 0px;
      margin: 0 auto;
+    &-list {
+     display: flex;
+    }
+    &-img {
+     display: block;
+     width: 100%;
+     height: auto;
+    }
+    &-cover-text {
+        position: absolute;
+        font-weight: 700;
+        line-height: 1.14;
+        text-align: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: var(--primary-link-color);
+        background: rgba(47, 48, 58, 0.8);
+        padding: 27px;
+        width: 100%;
+        bottom: 0;
+    }
  }
 
  .heading {
@@ -13,35 +34,12 @@
      margin-bottom: 50px;
  }
 
- .work-list {
-     display: flex;
- }
 
  .work-element {
      position: relative;
      margin-right: 30px;
- }
-
- .work-element:nth-last-child(-n+1) {
+    &:nth-last-child(-n+1) {
      margin-right: 0px;
+     }
  }
 
- .work-img {
-     display: block;
-     width: 100%;
-     height: auto;
- }
-
- .work-cover-text {
-     position: absolute;
-     font-weight: 700;
-     line-height: 1.14;
-     text-align: center;
-     letter-spacing: 0.03em;
-     text-transform: uppercase;
-     color: var(--primary-link-color);
-     background: rgba(47, 48, 58, 0.8);
-     padding: 27px;
-     width: 100%;
-     bottom: 0;
- }
