--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,5 +1,6 @@
  .button-list {
-    %flex-align
+     display: flex;
+     align-items: center;
      justify-content: center;
      margin-bottom: 50px;
  }
