--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ body {
   align-items: center;
 }
 
-.header-logo {
+.logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -120,34 +120,33 @@ body {
   color: var(--header-logo-color);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-logo:hover, .header-logo:focus {
+.logo:hover, .logo:focus {
   color: var(--header-logo-color);
 }
 
-span.header-logo {
+span.logo {
   color: var(--accent-color);
 }
-span.header-logo:hover, span.header-logo:focus {
+span.logo:hover, span.logo:focus {
   color: var(--accent-color);
 }
 
-.header-nav {
+.navigation {
   margin-left: 93px;
   margin-right: auto;
 }
-
-.header-list {
+.navigation__list {
   display: flex;
 }
 
-.header-element {
+.navigation__element {
   margin-right: 50px;
 }
-.header-element:nth-last-child(-n+1) {
+.navigation__element:nth-last-child(-n+1) {
   margin-right: 0px;
 }
 
-.header-link {
+.navigation__link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
@@ -159,15 +158,15 @@ span.header-logo:hover, span.header-logo:focus {
   display: block;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-link:hover, .header-link:focus {
+.navigation__link:hover, .navigation__link:focus {
   color: var(--accent-color);
 }
-.header-link-active {
+.navigation__link-active {
   color: var(--accent-color);
   position: relative;
 }
 
-.active-liner {
+.navigation__active-liner {
   position: absolute;
   height: 4px;
   width: 100%;
@@ -181,11 +180,11 @@ span.header-logo:hover, span.header-logo:focus {
   align-items: center;
 }
 
-.contacts-element:nth-child(1) {
+.contacts-list__element:nth-child(1) {
   margin-right: 40px;
 }
 
-.header-mail {
+.contacts-list__mail {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -196,12 +195,12 @@ span.header-logo:hover, span.header-logo:focus {
   cursor: pointer;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-mail:hover, .header-mail:focus {
+.contacts-list__mail:hover, .contacts-list__mail:focus {
   color: var(--accent-color);
   fill: var(--accent-color);
 }
 
-.header-tel {
+.contacts-list__tel {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -211,12 +210,12 @@ span.header-logo:hover, span.header-logo:focus {
   color: var(--second-link-color);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-tel:hover, .header-tel:focus {
+.contacts-list__tel:hover, .contacts-list__tel:focus {
   color: var(--accent-color);
   fill: var(--accent-color);
 }
 
-.contacts-icon {
+.contacts-list__icon {
   fill: currentColor;
   margin-right: 10px;
 }
@@ -427,8 +426,8 @@ span.header-logo:hover, span.header-logo:focus {
 
 .customers-icon-link {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   padding: 0;
   width: 170px;
   height: 92px;
@@ -534,8 +533,8 @@ span.footer-logo:hover, span.footer-logo:focus {
 
 .footer-social-icon-svg {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   padding: 0;
   border: none;
   width: 44px;
@@ -775,8 +774,8 @@ span.footer-logo:hover, span.footer-logo:focus {
   top: 8px;
   right: 8px;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   width: 30px;
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
