--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -11,8 +11,9 @@
 }
 
 .benefits-icons {
+    display: flex;
     justify-content: center;
-    %flex-align
+    align-items: center;
     width: 270px;
     height: 120px;
     background-color: var(--team-background-color);
