--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -95,7 +95,8 @@
 
 
  .footer-social-icon-svg {
-    %flex-align
+     display: flex;
+     align-items: center;
      justify-content: center;
      padding: 0;
      border: none;
