--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -3,10 +3,11 @@
 }
 
 .header-container {
-    d%flex-align
+    display: flex;
+    align-items: center;
 }
 
-.header-logo {
+.logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
@@ -20,7 +21,7 @@
     }
 }
 
-span.header-logo {
+span.logo {
     color: var(--accent-color);
     
     &:hover,
@@ -30,16 +31,16 @@ span.header-logo {
 }
 
 
-.header-nav {
+.navigation {
     margin-left: 93px;
     margin-right: auto;
+    &__list {
+            display: flex;
+        } 
 }
 
-.header-list {
-    display: flex;
-}
 
-.header-element {
+.navigation__element {
     margin-right: 50px;
     &:nth-last-child(-n+1) {
     margin-right: 0px;
@@ -48,7 +49,7 @@ span.header-logo {
 
 
 
-.header-link {
+.navigation__link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
@@ -68,8 +69,7 @@ span.header-logo {
     position: relative;
     }
 }
-
-.active-liner {
+.navigation__active-liner {
     position: absolute;
     height: 4px;
     width: 100%;
@@ -79,15 +79,17 @@ span.header-logo {
 }
 
 .contacts-list {
-    %flex-align
+    display: flex;
+    align-items: center;
 }
 
-.contacts-element:nth-child(1) {
+.contacts-list__element:nth-child(1) {
     margin-right: 40px;
 }
 
-.header-mail {
-    %flex-align
+.contacts-list__mail {
+    display: flex;
+    align-items: center;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
@@ -104,8 +106,9 @@ span.header-logo {
 
 
 
-.header-tel {
-    %flex-align
+.contacts-list__tel {
+    display: flex;
+    align-items: center;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
@@ -119,7 +122,7 @@ span.header-logo {
     }
 }
 
-.contacts-icon {
+.contacts-list__icon {
     fill: currentColor;
     margin-right: 10px;
 }
