--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -29,7 +29,8 @@
      position: absolute;
      top: 8px;
      right: 8px;
-    %flex-align
+     display: flex;
+     align-items: center;
      justify-content: center;
      width: 30px;
      height: 30px;
@@ -155,7 +156,8 @@
 
 
  label.modal-politic-label {
-    %flex-align
+     display: flex;
+     align-items: center;
      justify-content: center;
  }
 
