--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -59,9 +59,10 @@
  }
  }
 
- .team-icon-svg {
-    %flex-align
+ .team-icon-svg{
+     display: flex;
      justify-content: center;
+     align-items: center;
      padding: 0;
      border: none;
      width: 44px;
@@ -74,6 +75,5 @@
         fill: var(--primary-link-color);
         background-color: var(--second-background-color-icon);
     }
-
- }
+}
 
