--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -81,11 +81,26 @@ span.logo {
 .contacts-list {
     display: flex;
     align-items: center;
+    &__element:nth-child(1) {
+    margin-right: 40px;
+    }
+    &__icon {
+        fill: currentColor;
+        margin-right: 10px;
+    }
+
+    &__envelope {
+        width: 16px;
+        height: 12px;
+    }
+
+    &__smartphone {
+        width: 10px;
+        height: 16px;
+    }
 }
 
-.contacts-list__element:nth-child(1) {
-    margin-right: 40px;
-}
+
 
 .contacts-list__mail {
     display: flex;
@@ -122,17 +137,3 @@ span.logo {
     }
 }
 
-.contacts-list__icon {
-    fill: currentColor;
-    margin-right: 10px;
-}
-
-.envelope {
-    width: 16px;
-    height: 12px;
-}
-
-.smartphone {
-    width: 10px;
-    height: 16px;
-}
